# is-04-mcp

./: .coderabbit.yaml  .gitignore  AGENTS.md  README.md
.agents/skills/analyzing-bundle-size/: SKILL.md
.agents/skills/analyzing-bundle-size/scripts/: analyze-deps.sh  check-imports.sh
.agents/skills/creating-excalidraw-components/: SKILL.md
.agents/skills/excalidraw-architecture/: SKILL.md
.agents/skills/excalidraw-architecture/references/: RENDERING-PIPELINE.md  STATE-MANAGEMENT.md
.agents/skills/reviewing-excalidraw-changes/: SKILL.md
.cursor/: mcp.json.example
.github/: PULL_REQUEST_TEMPLATE.md
docs/mcp/: SECURITY.md
docs/mcp-testing/: README.md
mcp-examples/excalidraw-scenes-py/: README.md  pyproject.toml  server.py
mcp-examples/excalidraw-scenes-ts/: README.md  package.json
mcp-examples/excalidraw-scenes-ts/fixtures/: sample.excalidraw
mcp-examples/excalidraw-scenes-ts/src/: server.ts
