[project]
name = "excalidraw-scenes-mcp"
version = "0.2.0"
description = "MCP server for .excalidraw scenes and dev-docs/ in the monorepo"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.12.0"]

[project.scripts]
excalidraw-scenes-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
